# qwdtools

./: .gitignore  CMakeLists.txt  Makefile.BSD  Makefile.GNU  README.md  meson.build
.github/workflows/: build-all-targets.yml  build-and-deploy-release.yml  build-and-deploy-snapshot.yml  build-targets-cmake.yml  build-targets.yml
src/: bothtools.c  defs.h  dem_parse.c  main.c  version.h
